--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,15 +4,15 @@
 @tailwind components;
 @tailwind utilities;
 
-button.slick-prev {
+.custom-slider button.slick-prev {
   left: 20px;
   z-index: 10;
 }
-button.slick-next {
+.custom-slider button.slick-next {
   right: 80px;
   z-index: 10;
 }
-button.slick-prev::before {
+.custom-slider button.slick-prev::before {
   color: gray;
   content: "\276E";
   background-color: #ffd3d3;
@@ -23,12 +23,42 @@ button.slick-prev::before {
   justify-content: center;
   align-items: center;
 }
-button.slick-next::before {
+.custom-slider button.slick-next::before {
   color: gray;
   content: "\276F";
   background-color: #ffd3d3;
   width: 80px;
   height: 80px;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product-image-slider button.slick-prev {
+  left: 0px;
+  z-index: 10;
+}
+.product-image-slider button.slick-next {
+  right: 30px;
+  z-index: 10;
+}
+.product-image-slider button.slick-prev::before {
+  color: gray;
+  content: "\276E";
+  background-color: #ffd3d3;
+  width: 40px;
+  height: 40px;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product-image-slider button.slick-next::before {
+  color: gray;
+  content: "\276F";
+  background-color: #ffd3d3;
+  width: 40px;
+  height: 40px;
   font-size: 30px;
   display: flex;
   justify-content: center;
