--- a/client/src/index.css
+++ b/client/src/index.css
@@ -64,3 +64,21 @@
   justify-content: center;
   align-items: center;
 }
+.my-masonry-grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: flex;
+  margin-left: -10px;
+  margin-right: -10px;
+  width: auto;
+}
+.my-masonry-grid_column {
+  background-clip: padding-box;
+}
+
+/* Style your items */
+.my-masonry-grid_column > div {
+  /* change div to reference your elements you put in <Masonry> */
+
+  margin-bottom: 20px;
+}
